Fix: z-index

--- a/assets/scss/_feedback.scss
+++ b/assets/scss/_feedback.scss
@@ -45,6 +45,8 @@
 
 
   .feedback-wrapper {
+    position: relative;
+    z-index: 20;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -219,6 +221,7 @@
       line-height: 1.65;
       display: -webkit-box;
       -webkit-line-clamp: 4;
+      line-clamp: 4;
       -webkit-box-orient: vertical;
       overflow: hidden;
       margin: 0;
